[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/font/RussoOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/pause/restart.png" type="Texture" id=2]
[ext_resource path="res://assets/pause/continue.png" type="Texture" id=3]
[ext_resource path="res://assets/pause/back_to_menu.png" type="Texture" id=4]
[ext_resource path="res://pause.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.705882 )
corner_detail = 1

[sub_resource type="DynamicFont" id=2]
size = 88
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="pause" type="Control"]
pause_mode = 2
visible = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 600.0
margin_bottom = 312.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 120.0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 49.0
margin_right = 549.0
margin_bottom = 120.0
rect_min_size = Vector2( 500, 120 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]PAWSED"
text = "PAWSED"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 600.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btncontinue" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 175.0
margin_right = 425.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Continue"
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 600.0
margin_bottom = 248.0

[node name="btnrestart" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 175.0
margin_right = 425.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 60 )
custom_fonts/font = SubResource( 4 )
text = "Restart"
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 600.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btnexit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 175.0
margin_right = 425.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Back to Menu"
icon = ExtResource( 4 )
expand_icon = true
[connection signal="visibility_changed" from="." to="." method="_on_pause_visibility_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/btncontinue" to="." method="_on_btncontinue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/btnrestart" to="." method="_on_btnrestart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer3/btnexit" to="." method="_on_btnexit_pressed"]
